# volunteer-matchmaker

./: .env  .env.example  .gitignore  README.md  architecture.html  ingestor.py  main.py  package-lock.json  pyproject.toml  requirements.txt  schema.sql
api/: deps.py  main.py
api/core/: config.py  constants.py  passwords.py  security.py
api/db/: base.py  bootstrap.py  session.py
api/models/: __init__.py  assignment.py  audit.py  document.py  event.py  ngo.py  skill.py  user.py  volunteer.py
api/routes/: assignments.py  audit.py  auth.py  events.py  ngo.py  volunteer.py
api/schemas/: assignment.py  auth.py  event.py  ngo.py  volunteer.py
api/services/: ingestion_service.py  matching_service.py  nlp_service.py  pipeline_service.py  storage_service.py  trust_service.py
backend/: config.py  db.py
backend/api/: __init__.py  map_routes.py  volunteer_routes.py
backend/ingestion/: __init__.py  ingestor.py  ingestor_to_severity.py
backend/matching/: __init__.py  matcher.py
backend/models/: __init__.py  assignment.py  db_models.py  volunteer.py
backend/nlp/: __init__.py  category_config.py  severity_engine.py  skill_verifier.py  trust_scorer.py
config/: requirements.txt
docs/: api_reference.md  architecture.md  dbinfo.md  scoring_logic.md
frontend/: .env.local  .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/events/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: EventCard.tsx  Layout.tsx  LogoutButton.tsx  MapView.tsx  Navbar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  firebase.ts
frontend/src/components/: MapView.jsx
infra/docker/: Dockerfile.api  docker-compose.yml
infra/gcp/: cloudsql.md  firebase.md
nlp/: __init__.py  category_config.py  event_nlp_extractor.py  trust_scorer.py
scripts/: init_db.py  seed_db.py
tests/: test_category_config.py  test_event_nlp_extractor.py  test_events.py  test_ingestor.py  test_matcher.py  test_matching.py  test_severity_engine.py  test_skill_verifier.py  test_trust.py  test_volunteer_api.py  test_volunteer_models.py
