[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ------------------------------------------------------------
# Project metadata
# ------------------------------------------------------------
[project]
name = "ngo-platform"
version = "0.1.0"
description = "NGO Volunteer Platform — Google Solution Challenge 2026"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core NLP / ML
    "numpy>=1.26",
    "scikit-learn>=1.4",

    # Document ingestion
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "langchain-text-splitters>=0.2",

    # OCR
    "pytesseract>=0.3.10",
    "Pillow>=10.0",

    # Google Cloud
    "google-cloud-aiplatform>=1.60",
    "vertexai>=1.60",
    "google-cloud-translate>=3.15",
    "google-cloud-language>=2.13",
    "google-cloud-vision>=3.7",

    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",

    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",

    # Validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",

    # Utilities
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # for FastAPI TestClient
    "ruff>=0.4",
    "mypy>=1.10",

    # GCP type stubs
    "types-python-dateutil",
]

# ------------------------------------------------------------
# Ruff (linter + formatter — replaces flake8, isort, black)
# ------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments (FastAPI patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ------------------------------------------------------------
# Mypy (static type checking)
# ------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false                  # start permissive; tighten as codebase matures
ignore_missing_imports = true   # GCP stubs are incomplete
warn_unused_ignores = true
warn_return_any = false

# Per-module overrides
[[tool.mypy.overrides]]
module = ["fitz.*", "docx.*", "pytesseract.*"]
ignore_missing_imports = true

# ------------------------------------------------------------
# Pytest
# ------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"           # for pytest-asyncio
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]
markers = [
    "slow: marks tests that call real GCP APIs (skipped in CI by default)",
    "offline: marks tests that use only local / offline fallbacks",
]

# Coverage
[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60                 # raise bar as codebase matures

# ------------------------------------------------------------
# Setuptools package discovery
# ------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]